avance en generador de cartas

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <div class="card">
+        <span class="simbolo-superior" id="simboloSuperior">♥</span>
+        <span class="valor-carta" id="valorCarta">J</span>
+        <span class="simbolo-inferior" id="simboloInferior">♥</span>
+    </div>
+    <div class="contenedor-boton">
+        <button class="boton-generar" id="botonGenerarCarta">Generar Carta</button>
+    </div>
 </body>
 </html>
