--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
+<body onload="loadPage();">
     <div class="card">
-        <span class="simbolo-superior" id="simboloSuperior">♥</span>
-        <span class="valor-carta" id="valorCarta">J</span>
-        <span class="simbolo-inferior" id="simboloInferior">♥</span>
+        <div class="contenedor-superior">
+            <span class="valor-superior" id="valorSuperior"></span>
+            <span class="simbolo-superior" id="simboloSuperior"></span>
+        </div>
+        <span class="valor-carta" id="valorCarta"></span>
+        <div class="contenedor-inferior">
+            <span class="simbolo-inferior" id="simboloInferior"></span>
+            <span class="valor-inferior" id="valorInferior"></span>
+
+        </div>
+        
     </div>
     <div class="contenedor-boton">
-        <button class="boton-generar" id="botonGenerarCarta">Generar Carta</button>
+        <button class="boton-generar" id="botonGenerarCarta" onclick="">Generar Carta</button>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
